# sounds

./: .clang-format  .gitignore  CMakeLists.txt
include/: dsp.h  dsp.hpp  oscillator.hpp  utils.hpp
src/: main.cpp  oscillator.cpp
